cmake_minimum_required(VERSION 3.8)
project(target_scorer)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(mavros_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

# Custom mesajları oluştur
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/ScoredTarget.msg"
  "msg/ScoredTargetArray.msg"
  DEPENDENCIES std_msgs
)

ament_package()